--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.5.0",
     "html-react-parser": "^5.2.5",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
     "query-string": "^9.2.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
