--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/pro-components": "^2.8.9",
     "@ant-design/pro-layout": "^7.22.4",
+    "@lexical/react": "^0.32.1",
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.4",
     "async-mutex": "^0.5.0",
@@ -21,6 +22,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "html-react-parser": "^5.2.5",
+    "lexical": "^0.32.1",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "query-string": "^9.2.0",
