--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ant-design/icons": "^6.0.0",
     "@ant-design/pro-components": "^2.8.9",
     "@ant-design/pro-layout": "^7.22.4",
+    "@fontsource/inter": "^5.2.6",
     "@lexical/react": "^0.32.1",
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.25.4",
