--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "html-react-parser": "^5.2.5",
+    "i18next": "^25.3.1",
     "lexical": "^0.32.1",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
@@ -31,6 +32,7 @@
     "react-countup": "^6.5.3",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
