--- a/package.json
+++ b/package.json
@@ -1,62 +1,63 @@
 {
-  "name": "jobhunter_fe",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@ant-design/icons": "^6.0.0",
-    "@ant-design/pro-components": "^2.8.9",
-    "@ant-design/pro-layout": "^7.22.4",
-    "@fontsource/inter": "^5.2.6",
-    "@lexical/react": "^0.32.1",
-    "@reduxjs/toolkit": "^2.8.2",
-    "antd": "^5.25.4",
-    "async-mutex": "^0.5.0",
-    "axios": "^1.9.0",
-    "dayjs": "^1.11.13",
-    "dotenv": "^16.5.0",
-    "html-react-parser": "^5.2.5",
-    "i18next": "^25.3.1",
-    "lexical": "^0.32.1",
-    "lodash": "^4.17.21",
-    "mitt": "^3.0.1",
-    "query-string": "^9.2.0",
-    "react": "^18.3.1",
-    "react-countup": "^6.5.3",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^15.6.0",
-    "react-icons": "^5.5.0",
-    "react-quill": "^2.0.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2",
-    "react-spinners": "^0.17.0",
-    "spring-filter-query-builder": "^1.1.1",
-    "uuid": "^11.1.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/lodash": "^4.17.17",
-    "@types/node": "^22.15.30",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "sass": "^1.89.1",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+    "name": "jobhunter_fe",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "start": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@ant-design/icons": "^6.0.0",
+        "@ant-design/pro-components": "^2.8.9",
+        "@ant-design/pro-layout": "^7.22.4",
+        "@fontsource/inter": "^5.2.6",
+        "@lexical/react": "^0.32.1",
+        "@reduxjs/toolkit": "^2.8.2",
+        "antd": "^5.25.4",
+        "async-mutex": "^0.5.0",
+        "axios": "^1.9.0",
+        "dayjs": "^1.11.13",
+        "dotenv": "^16.5.0",
+        "html-react-parser": "^5.2.5",
+        "i18next": "^25.3.1",
+        "lexical": "^0.32.1",
+        "lodash": "^4.17.21",
+        "mitt": "^3.0.1",
+        "query-string": "^9.2.0",
+        "react": "^18.3.1",
+        "react-countup": "^6.5.3",
+        "react-device-detect": "^2.2.3",
+        "react-dom": "^18.3.1",
+        "react-i18next": "^15.6.0",
+        "react-icons": "^5.5.0",
+        "react-quill": "^2.0.0",
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^7.6.2",
+        "react-spinners": "^0.17.0",
+        "recharts": "^3.0.2",
+        "spring-filter-query-builder": "^1.1.1",
+        "uuid": "^11.1.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.25.0",
+        "@types/lodash": "^4.17.17",
+        "@types/node": "^22.15.30",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/uuid": "^10.0.0",
+        "@vitejs/plugin-react": "^4.4.1",
+        "eslint": "^9.25.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^16.0.0",
+        "sass": "^1.89.1",
+        "typescript": "~5.8.3",
+        "typescript-eslint": "^8.30.1",
+        "vite": "^6.3.5"
+    }
 }
