--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.9.0",
         "dayjs": "^1.11.13",
         "dotenv": "^16.5.0",
+        "echarts": "^5.6.0",
         "html-react-parser": "^5.2.5",
         "i18next": "^25.3.1",
         "lexical": "^0.32.1",
@@ -29,6 +30,7 @@
         "mitt": "^3.0.1",
         "query-string": "^9.2.0",
         "react": "^18.3.1",
+        "react-apexcharts": "^1.7.0",
         "react-countup": "^6.5.3",
         "react-device-detect": "^2.2.3",
         "react-dom": "^18.3.1",
@@ -38,7 +40,6 @@
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.6.2",
         "react-spinners": "^0.17.0",
-        "recharts": "^3.0.2",
         "spring-filter-query-builder": "^1.1.1",
         "uuid": "^11.1.0"
     },
