--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "lexical": "^0.32.1",
         "lodash": "^4.17.21",
         "mitt": "^3.0.1",
+        "motion": "^12.23.3",
         "query-string": "^9.2.0",
         "react": "^18.3.1",
         "react-apexcharts": "^1.7.0",
