--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "async-mutex": "^0.5.0",
         "axios": "^1.9.0",
         "dayjs": "^1.11.13",
+        "dompurify": "^3.2.6",
         "dotenv": "^16.5.0",
         "echarts": "^5.6.0",
         "html-react-parser": "^5.2.5",
